fix spacing

--- a/src/css/_wells.scss
+++ b/src/css/_wells.scss
@@ -2,7 +2,7 @@
 .well {
   min-height: 20px;
   padding: 19px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: $well-bg;
   border: 1px solid $well-border;
   border-radius: 4px;
