--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -34,6 +34,11 @@ p {
   text-align: left;
 }
 
+.no-margin {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 #hero {
   z-index: -1;
   position: absolute;
